<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3F1D6F"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/stLine"
        android:layout_width="90dp"
        android:layout_height="12dp"
        android:layout_marginTop="3dp"
        android:background="?attr/panelBackground"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginTxt" />

    <ImageView
        android:id="@+id/doorImg"
        android:layout_width="275dp"
        android:layout_height="212dp"
        android:layout_marginTop="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stLine"
        app:srcCompat="@drawable/login_door" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="282dp"
        android:layout_height="183dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doorImg">

        <EditText
            android:id="@+id/emailTxt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/passTxt"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <TextView
            android:id="@+id/forgetTxt"
            android:layout_width="wrap_content"
            android:layout_height="32dp"
            android:layout_marginLeft="40dp"
            android:onClick="Forget"
            android:text="@string/forget_password"
            android:textColor="#F8040C"
            android:textSize="16sp" />

        <Button
            android:id="@+id/logBtn"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:backgroundTint="#009688"
            android:onClick="LogIn"
            android:text="@string/login"
            android:textSize="24sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/orImg"
        android:layout_width="334dp"
        android:layout_height="57dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:srcCompat="@drawable/or" />

    <TextView
        android:id="@+id/createTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/create_a_new_account"
        android:textColor="@color/white"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/orImg" />

    <Button
        android:id="@+id/sinBtn"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginTop="14dp"
        android:backgroundTint="#009688"
        android:onClick="SignIn"
        android:text="Sign in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createTxt" />

</androidx.constraintlayout.widget.ConstraintLayout>